# fty-metric-ambient-location

./: .dependencies-graph.dot.part  .gitignore  .travis.yml  CMakeLists.txt  Jenkinsfile  Makefile.am  README.md  ci_dependencies.sh  ci_deploy.sh  ci_deploy_obs.sh  configure.ac  project.xml
builds/check_zproject/: ci_build.sh
builds/cmake/: ci_build.sh
doc/: .gitignore  Makefile.am  asciidoc.conf  fty-metric-ambient-location.adoc
include/: Makefile.am  fty_ambient_location_server.h  fty_metric_ambient_location.h  fty_metric_ambient_location_library.h
packaging/debian/: changelog  control  copyright  fty-metric-ambient-location.dsc.obs  fty-metric-ambient-location.install  fty-metric-ambient-location.manpages  libfty-metric-ambient-location-dev.install  libfty-metric-ambient-location0.install  rules
packaging/redhat/: fty-metric-ambient-location.spec
resources/: fty-metric-ambient-location.cfg.in  fty-metric-ambient-location.service.in
src/: .gitignore  Makemodule.am  fty-metric-ambient-location.service.in  fty_ambient_location_server.cc  fty_ambient_location_server.h  fty_metric_ambient_location.cc  fty_metric_ambient_location_classes.h  fty_metric_ambient_location_private_selftest.cc  fty_metric_ambient_location_selftest.cc  libfty_metric_ambient_location.pc.in
tests/: ambient_location_server.cpp  main.cc
